--- a/DH_BugTracker/Views/Manage/ChangePassword.cshtml
+++ b/DH_BugTracker/Views/Manage/ChangePassword.cshtml
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
+    <h4 style="padding-left:10px">Change Password Form</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
@@ -32,6 +32,7 @@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <button type="submit" class="btn allbtn">Change Password</button>
+            @Html.ActionLink("Back to Profile", "EditUser",null,new { style = "padding-left:10px"})
         </div>
     </div>
 }
