--- a/DH_BugTracker/Views/Project/ManageUsers.cshtml
+++ b/DH_BugTracker/Views/Project/ManageUsers.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Manage Project Users";
 }
 
-<h3>@ViewBag.Title for Project: @ViewBag.ProjectName</h3>
+<h3>@ViewBag.Title for: @ViewBag.ProjectName</h3>
 <hr />
 
 @using (Html.BeginForm())
