--- a/DH_BugTracker/Views/Admin/ManageProjects.cshtml
+++ b/DH_BugTracker/Views/Admin/ManageProjects.cshtml
@@ -14,7 +14,7 @@
             <div class=" col-4">
                 <div class="row">
                     <div class="col">
-                        <h3>Select Projects</h3>
+                        <h3>Select Project/s</h3>
                     </div>
                 </div>
                 <div class="row">
@@ -85,46 +85,60 @@
     <hr />
     <div class="row">
         <div class="col">
-            <table class="table" id="DTJQ2" style="width:100%">
-                <thead>
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Name)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Email)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Role)
-                        </th>
-                        <th>
-                            @Html.DisplayName("Projects")
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelitem => item.Name)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelitem => item.Email)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelitem => item.Role)
-                        </td>
-                        <td>
-                            @foreach (var name in item.ProjectNames)
-                            {
-                                @name <br />
-                            }
-                        </td>
-                    </tr>
-                    }
-                </tbody>
-            </table>
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header card-header-primary">
+                        <h4 class="card-title ">Project Assignments</h4>
+                        <p class="card-category" style="padding-left:10px">All Users you have assigned to Projects.</p>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table" id="DTJQ2" style="width:100%">
+                                <thead>
+                                    <tr>
+                                        <th>
+                                            @Html.DisplayName("Projects Assigned")
+                                        </th>
+                                        <th>
+                                        @Html.DisplayNameFor(model => model.Name)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Email)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Role)
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model)
+                                    {
+                                        <tr>
+                                            <td>
+                                                @foreach (var name in item.ProjectNames)
+                                                {
+                                                    @name <br />
+                                                }
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelitem => item.Name)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelitem => item.Email)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelitem => item.Role)
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
 </div>
