--- a/DH_BugTracker/Views/Ticket/Details.cshtml
+++ b/DH_BugTracker/Views/Ticket/Details.cshtml
@@ -12,7 +12,7 @@
 </p>
 <hr />
 <div class="row">
-    <div class="col-5">
+    <div class="col">
         <dl class="dl-horizontal">
             <dt>
                 @Html.DisplayNameFor(model => model.AssignedToUser.FirstName)
@@ -96,11 +96,11 @@
 
         </dl>
     </div>
-    <div class="col-7" style="border-left:1px solid #D0D0D0">
+    <div class="col" style="border-left:1px solid #D0D0D0">
         @using (Html.BeginForm("Create", "TicketComment", FormMethod.Post))
         {
-        <h5>Leave a Comment?</h5>
-        <div class="row no-gutters">
+            <h5>Leave a Comment?</h5>
+            <div class="row no-gutters">
                 @Html.AntiForgeryToken()
                 @Html.Hidden("TicketId", Model.Id)
 
@@ -111,113 +111,188 @@
                 <div class="col-3 text-center">
                     <button type="submit" class="btn allbtn">Add</button>
                 </div>
-        </div>
+            </div>
         }
         <hr />
-        <table class="table" id="DTJQ6">
-            <thead>
-                <tr>
-                    <th>
-                        @Html.DisplayName("Commenter")
-                    </th>
-                    <th>
-                        @Html.DisplayName("Message")
-                    </th>
-                    <th>
-                        @Html.DisplayName("Created")
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var comment in Model.TicketComments.OrderByDescending(tc => tc.Created))
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => comment.User.FullName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => comment.Comment)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => comment.Created)
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header card-header-primary">
+                    <h4 class="card-title ">Ticket Comments</h4>
+                    <p class="card-category" style="padding-left:10px">All comments for this Ticket.</p>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+
+                        <table class="table" id="DTJQ6">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        @Html.DisplayName("Commenter")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayName("Message")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayName("Created")
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var comment in Model.TicketComments.OrderByDescending(tc => tc.Created))
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => comment.User.FullName)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => comment.Comment)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => comment.Created)
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <hr />
 <div class="row">
-    <div class="col-7">
-        @using (Html.BeginForm("Create", "TicketAttach", FormMethod.Post))
+    <div class="col">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header card-header-primary">
+                    <h4 class="card-title ">Ticket History</h4>
+                    <p class="card-category" style="padding-left:10px">All History Information for this Ticket.</p>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table" id="DTJQ8">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        @Html.DisplayName("Effected User")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayName("New Value")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayName("Property")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayName("Date Changed")
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var history in Model.TicketHistories.OrderByDescending(th => th.Changed))
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => history.User.FullName)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelitem => history.NewValue)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => history.Property)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => history.Changed)
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col" style="border-left:1px solid #D0D0D0">
+        @using (Html.BeginForm("Create", "TicketAttach", FormMethod.Post, new { enctype = "Multipart/form-data" }))
         {
             <h5>Leave an Attachment?</h5>
             <div class="row no-gutters">
                 @Html.AntiForgeryToken()
                 @Html.Hidden("TicketId", Model.Id)
-
-                <div class="col-9 d-flex justify-content-center" style="padding-top:8px">
-                    @Html.Editor("Description", new { htmlAttributes = new { @class = "form-control txtBoxs", style = "max-width:100%" } })
+                <div class="col-5">
+                    @Html.Label("Upload File Attachment")<br />
+                    @Html.TextBox("File", null, new { @type = "file", style = "padding-right:15px" })
+                </div>
+                <div class="col-5">
+                    @Html.Label("Add a Description")<br />
+                    @Html.Editor("AttachDesc", new { htmlAttributes = new { @class = "form-control txtBoxs", style = "max-width:100%" } })
                     @Html.ValidationMessage("Description", "", new { @class = "text-danger" })
                 </div>
-                <div class="col-3 text-center">
+                <div class="col-2 text-center" style="margin-top:20px">
                     <button type="submit" class="btn allbtn">Add</button>
                 </div>
             </div>
         }
         <hr />
-        <table class="table" id="DTJQ7">
-            <thead>
-                <tr>
-                    <th>
-                        @Html.DisplayName("File")
-                    </th>
-                    <th>
-                        @Html.DisplayName("Uploader")
-                    </th>
-                    <th>
-                        @Html.DisplayName("Notes")
-                    </th>
-                    <th>
-                        @Html.DisplayName("Created")
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var attachment in Model.TicketAttaches.OrderByDescending(ta => ta.Created))
-                {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => attachment.FilePath)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => attachment.User.FullName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => attachment.Description)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => attachment.Created)
-                    </td>
-                </tr>
-                }
-            </tbody>
-        </table>
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header card-header-primary">
+                    <h4 class="card-title ">Ticket Attachments</h4>
+                    <p class="card-category" style="padding-left:10px">All files attached to this Ticket.</p>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table" id="DTJQ7">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        @Html.DisplayName("File")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayName("Uploader")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayName("Notes")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayName("Created")
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var attachment in Model.TicketAttaches.OrderByDescending(ta => ta.Created))
+                                {
+                                    <tr>
+                                        <td>
+                                            @{var displayPath = attachment.FilePath.Split('/')[2].Split('_')[0] + Path.GetExtension(attachment.FilePath);}
+                                            @displayPath
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => attachment.User.FullName)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => attachment.Description)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => attachment.Created)
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
 
 @section scripts{
     <script>
-        $('#DTJQ6').dataTable( {
-            "bProcessing": true,
-            "bServerSide": true,
-            "sAjaxSource": "/Scripts/jquery.dataTables.min.js"
-        });
-        $('#DTJQ7').dataTable({
-            "bProcessing": true,
-            "bServerSide": true,
-            "sAjaxSource": "/Scripts/jquery.dataTables.min.js"
-        });
+        $('#DTJQ6').dataTable();
+        $('#DTJQ7').dataTable();
+        $('#DTJQ8').dataTable();
     </script>
 }
